# JIIT-time-table-website

./: .env  .gitignore  01.py  README.md  app.py  convertor_csv.py  convertor_json.py  csv_json_convertor.py  index.html  json_creater.py  main.py  package-lock.json  package.json  pdf_csv_convertor(128).py  readme.md  requirements.txt  server.py  tailwind.config.js  vercel.json  vite.config.ts  xls_csv_convertor.py  xlsx_csv_convertor.py
.legacy/creator/: ac_creator.py  subjects_creator.py
app/: globals.css  layout.tsx  page.tsx
app/schedule/: page.tsx
components/: action-buttons.tsx  download-buttons.tsx  google-calendar-button.tsx  schedule-display.tsx  schedule-form.tsx
creator/: .env.example  .gitignore  README.md  ac_creator.py  app.py  cli.py  exam_schedule_creator.py  json_creater.py  main.py  pyproject.toml  run.sh  subjects_creator.py  timetable_creator.py
creator/app/: __init__.py
creator/app/core/: __init__.py  gemini.py  models.py  settings.py  utils.py
creator/app/services/: __init__.py  academic_calendar.py  exam_schedule.py  subjects_ai.py  subjects_manual.py  timetable.py
creator/app/ui/: __init__.py  academic_calendar_page.py  exam_schedule_page.py  shared.py  subjects_ai_page.py  subjects_manual_page.py  timetable_page.py
data/xls/: B Tech I Sem Odd 2024 Aug 8.xlsx  B. Tech V Sem ODD 2024 Aug 7.xls  Diploma TT May 28 2024.xlsx
excel_parse_to_json/: requirements.txt
jiit-timetable/: package-lock.json  package.json  vite.config.ts
jiit-timetable/components/: action-buttons.tsx  download-buttons.tsx  google-calendar-button.tsx  schedule-display.tsx  schedule-form.tsx
jiit-timetable/public/: index.html
jiit-timetable/src/: App.tsx
modules/: BE128_creator.py  BE62_creator.py  _creator.py  csv_handeler.py  pdf_handeler.py  xls_handeler.py  xlsx_handeler.py
parser/: .gitignore  main.py  pyproject.toml  readme.md  requirements.txt
parser/BCA/: creator.py  utils.py
parser/common/: types.py  utils.py
parser/data/csv/: B Tech I Sem Odd 2024 Aug 8.csv
parser/data/xls/: B Tech III Sem 7 Aug (1).xls  B. Tech V Sem ODD 2024 Aug 7.xls  B.Sc Sem 1, 3, 5 Time Table May 24.xlsx  B.Tech VII sem timetable Aug 6.xls  BCA I & III Sem 2024 timetable.xls  Faculty Abbreviations.xlsx  MCA I Sem Odd 2024 timetable.xlsx  MSc I and III Sem timetable.xlsx  Mtech Sem III and DD ODD2024 Aug 05.xls
parser/models/: __init__.py  class_info.py  enums.py  subject.py
parser/modules/: BCA.py  BE128_creator.py  __init__.py  common.py  csv_convertor128.py  google_calender_integration.py  sector_128.py  sector_62.py  xls_handeler.py
parser/modules/compare_tt/: __init__.py  compare.py
parser/modules/tt_parsers/: __init__.py
parser/modules/tt_parsers/BCA/: __init__.py  creator.py
parser/modules/tt_parsers/sector_128/: __init__.py  creator.py
parser/modules/tt_parsers/sector_62/: __init__.py  creator.py
parser/sector_128/: creator.py  utils.py
parser/sector_62/: creator.py
parser/static/: streamlit_app_notWorking.py
parser/templates/: electives.html  index.html
parser/utils/: __init__.py  batch.py  debug.py  location.py  subject.py  time.py
public/: _creator.py  manifest.json  offline.html  script.py  service-worker.js  sitemap.xml
public/data/: 128-mapping.json
public/modules/: BE128_creator.py  BE62_creator.py
src/: App.tsx  index.css  main.tsx
src/components/: academic-calendar.tsx  action-buttons.tsx  compare-timetable.tsx  download-buttons.tsx  edit-event-dialog.tsx  google-calendar-button.tsx  mess-menu.tsx  navbar.tsx  not-found.tsx  redirectAC.tsx  redirectCT.tsx  schedule-display.tsx  schedule-form.tsx  timeline-landing.tsx  timeline-wrapper.tsx  timeline.tsx  url-params-dialog.tsx
src/context/: userContext.ts  userContextProvider.tsx
templates/: fileupload.html  index.html  schedule.html
templet/: index.html
types/: schedule.ts
website/: .gitignore  next.config.ts  package.json  vercel.json
(+125 files in other folders)
